manifest link in index.html moved to the top of the head tag

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "React App",
-  "name": "Cloth E-Commerce App",
+  "name": "Clothes E-Commerce App",
   "icons": [
     {
       "src": "favicon.ico",
